Created some components

--- a/templates/app.hbs
+++ b/templates/app.hbs
@@ -12,6 +12,8 @@
 <body>
 	<div id="root">{{{content}}}</div>
 
+	{{{ initialState }}}
+
 	<script src="/assets/vendor.js"></script>
 	<script src="/assets/app.js"></script>
 </body>
