--- a/app/styles/app-view.scss
+++ b/app/styles/app-view.scss
@@ -1,6 +1,15 @@
 #app-view {
 	font-family: sans-serif;
 	color: #333;
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-size: 100%;
+	}
 	
 	a {
 		color: #3273CB;
