Renamed some components and removed unused

--- a/app/styles/app-layout.scss
+++ b/app/styles/app-layout.scss
@@ -1,4 +1,4 @@
-#app-view {
+#app {
 	font-family: sans-serif;
 	color: #333;
 
@@ -13,10 +13,5 @@
 	
 	a {
 		color: #3273CB;
-	}
-
-	.page-footer {
-		color: #d0d0d0;
-		font-style: italic;
 	}
 }
