--- a/templates/app.hbs
+++ b/templates/app.hbs
@@ -2,14 +2,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 	<title>Demo</title>
 	<link rel="stylesheet" href="/assets/app.css">
+	{{{ initialState }}}
 </head>
 <body>
 	<div id="root">{{{content}}}</div>
-
-	{{{ initialState }}}
 	<script src="/assets/vendor.js"></script>
 	<script src="/assets/app.js"></script>
 </body>
