--- a/templates/app.hbs
+++ b/templates/app.hbs
@@ -8,7 +8,7 @@
 	{{{ initialState }}}
 </head>
 <body>
-	<div id="root">{{{content}}}</div>
+	<div id="root"></div>
 	<script src="/assets/vendor.js"></script>
 	<script src="/assets/app.js"></script>
 </body>
