--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,10 @@
+$icon-font-path: "../../node_modules/bootstrap-sass/assets/fonts/bootstrap/";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap";
+
 $fa-font-path: "../../node_modules/font-awesome/fonts";
 @import "../../node_modules/font-awesome/scss/font-awesome";
 
+@import "./_bootstrap-theme";
 @import "./_footer";
 @import "./_item_manager";
 
@@ -8,10 +12,6 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 	font-family: sans-serif;
 	color: #333;
 
-	h1,	h2,	h3,	h4,	h5,	h6 {
-		font-size: 100%;
-	}
-	
 	a {
 		color: #3273CB;
 	}
