--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,18 +1,21 @@
+// Boostrap
+@import "./bootstrap-theme/_variables";
+// --
 $icon-font-path: "../../node_modules/bootstrap-sass/assets/fonts/bootstrap/";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap";
+// --
+@import "./bootstrap-theme/_custom";
+// /Boostrap
 
+// Font-awesome
 $fa-font-path: "../../node_modules/font-awesome/fonts";
 @import "../../node_modules/font-awesome/scss/font-awesome";
+// /Font-awesome
 
-@import "./_bootstrap-theme";
-@import "./_footer";
-@import "./_item_manager";
-
-#app {
-	font-family: sans-serif;
-	color: #333;
-
-	a {
-		color: #3273CB;
-	}
-}
+// App
+@import "./modules/_layout";
+@import "./modules/_footer";
+@import "./modules/_item_manager";
+@import "./modules/_nav";
+@import "./modules/_header";
+// /App
