--- a/templates/app.hbs
+++ b/templates/app.hbs
@@ -7,7 +7,7 @@
 	{{{ initialState }}}
 </head>
 <body>
-	<div id="root"></div>
+	<div id="root">{{{ initialHtml }}}</div>
 
 	<script src="/assets/vendor.js"></script>
 	<script src="/assets/app.js"></script>
