--- a/app/styles/bootstrap-theme/_variables.scss
+++ b/app/styles/bootstrap-theme/_variables.scss
@@ -1,6 +1,6 @@
 // Branding
-$brand-primary: #00355f; // #069
-$brand-success: #156615;
+$brand-primary: #00355f; // #069: brand blue
+$brand-success: #156615; // base green
 
 // Buttons
 $btn-default-bg: #0095e4;
