--- a/app/styles/modules/_layout.scss
+++ b/app/styles/modules/_layout.scss
@@ -1,3 +1,17 @@
 #app {
-	max-width: $screen-md-max;
+	max-width: $screen-xs-max;
+}
+
+.no-h-padding {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.no-v-margin {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.align-right {
+	text-align: right;
 }
