Add confirmation modal

--- a/app/styles/bootstrap-theme/_variables.scss
+++ b/app/styles/bootstrap-theme/_variables.scss
@@ -1,3 +1,4 @@
+/*
 // Branding
 $brand-primary: #00355f; // #069: brand blue
 $brand-success: #156615; // base green
@@ -11,3 +12,4 @@ $btn-primary-color: #3d3100;
 
 // Scaffolding
 $link-color: lighten($brand-primary, 15%);
+*/
