--- a/app/styles/bootstrap-theme/_custom.scss
+++ b/app/styles/bootstrap-theme/_custom.scss
@@ -42,6 +42,18 @@
 	}
 }
 
+.has-error {
+    .form-control {
+        transition: none;
+
+        &:focus {
+            box-shadow: 0 0 0 .13333333333333333em #a94442;
+            border-color: #a94442;
+            transition: none;
+        }
+    }
+}
+
 .modal-content {
     border-radius: 1px;
 
