--- a/app/styles/modules/_item_manager.scss
+++ b/app/styles/modules/_item_manager.scss
@@ -3,6 +3,17 @@
 	max-width: $screen-xs-max;
 }
 
+.item-manager {
+	.heading {
+	    background: none repeat scroll 0 0 #FAFAFA;
+	    border-bottom: 1px solid #E8E8E8;
+	    border-top: 1px solid #E8E8E8;
+	    box-shadow: 0 6px 6px -4px rgba(0, 0, 0, 0.05) inset;
+	    margin-top: 0;
+    	padding: 20px 10px 10px 10px;
+	}
+}
+
 .item {
 	span {
 		display: inline-block;
