--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,4 +18,5 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 @import "./modules/_item_manager";
 @import "./modules/_nav";
 @import "./modules/_header";
+@import "./modules/_form";
 // /App
