--- a/app/styles/modules/_item_manager.scss
+++ b/app/styles/modules/_item_manager.scss
@@ -5,9 +5,9 @@
 
 .item-manager {
 	.heading {
-	    background: none repeat scroll 0 0 #FAFAFA;
-	    border-bottom: 1px solid #E8E8E8;
-	    border-top: 1px solid #E8E8E8;
+	    background: none repeat scroll 0 0 #fafafa;
+	    border-bottom: 1px solid #e8e8e8;
+	    border-top: 1px solid #e8e8e8;
 	    box-shadow: 0 6px 6px -4px rgba(0, 0, 0, 0.05) inset;
 	    margin-top: 0;
     	padding: 20px 10px 10px 10px;
