--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,3 +20,7 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 @import "./modules/_header";
 @import "./modules/_form";
 // /App
+
+#map {
+	height: 186px;
+}
