--- a/templates/app.hbs
+++ b/templates/app.hbs
@@ -2,8 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
-	<title>Demo</title>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<title>Test</title>
 	<link rel="stylesheet" href="/assets/app.css">
 	{{{ initialState }}}
 </head>
