--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,6 +13,7 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 // /Font-awesome
 
 // App
+@import "./modules/_base";
 @import "./modules/_layout";
 @import "./modules/_footer";
 @import "./modules/_item_manager";
