Add DatePicker component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,6 +12,10 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 @import "../../node_modules/font-awesome/scss/font-awesome";
 // /Font-awesome
 
+// Flatpickr
+@import "../../node_modules/flatpickr/dist/flatpickr.min";
+// /Flatpickr
+
 // App
 @import "./modules/_base";
 @import "./modules/_layout";
