--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,7 +13,8 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 // /Font-awesome
 
 // Flatpickr
-@import "../../node_modules/flatpickr/dist/flatpickr.min";
+//@import "../../node_modules/flatpickr/dist/flatpickr.min";
+@import "../../node_modules/flatpickr/dist/flatpickr.dark.min";
 // /Flatpickr
 
 // App
